--- a/asg12-enhancement-project/immigration.css
+++ b/asg12-enhancement-project/immigration.css
@@ -13,7 +13,8 @@ h1 {
     padding: 10px;
 }
 
-.inst_div {
+/* area chart usage */
+.area_chart_usage_div {
     color: black;
 }
 
@@ -41,7 +42,7 @@ h1 {
     white-space: normal;
 }
 
-/* pie chart title and history note */
+/* pie chart components */
 #pie-chart-title {
     text-anchor: middle;
     fill: steelblue;
@@ -55,6 +56,21 @@ h1 {
     fill: steelblue;
     font-family: Arial, sans-serif;
     font-size: 80%;
+}
+
+.tooltip {
+    background: #eee;
+    box-shadow: 0 0 5px #999999;
+    color: #333;
+    display: none;
+    font-size: 12px;
+    left: 130px;
+    padding: 10px;
+    position: absolute;
+    text-align: center;
+    top: 95px;
+    width: 80px;
+    z-index: 10;
 }
 
 
